# thorin

./: CMakeLists.txt
.github/workflows/: doxygen.yml
cmake/: thorin-config.cmake.in
include/thorin/: continuation.h
include/thorin/be/llvm/: amdgpu.h  llvm.h  nvvm.h
src/thorin/: CMakeLists.txt  config.h.in  continuation.cpp  continuation.h  def.h  enums.cpp  enums.h  portability.cpp  primop.cpp  primop.h  rec_stream.cpp  thorin.cpp  thorin.h  type.cpp  type.h  world.cpp  world.h
src/thorin/analyses/: compare.cpp  compare.h  divergence.cpp  schedule.cpp  verify.cpp
src/thorin/be/: codegen.cpp  codegen.h  emitter.h  kernel_config.h  lower_offload_intrinsics.cpp  lower_offload_intrinsics.h  runtime.h
src/thorin/be/c/: c.cpp  c.h
src/thorin/be/json/: json.cpp  json.h
src/thorin/be/llvm/: amdgpu.cpp  amdgpu.h  amdgpu_hsa.cpp  amdgpu_hsa.h  amdgpu_pal.cpp  amdgpu_pal.h  cpu.cpp  cpu.h  llvm.cpp  llvm.h  nvvm.cpp  nvvm.h  runtime.cpp  vectorize.cpp
src/thorin/be/spirv/: spirv.cpp  spirv.h  spirv_builder.hpp  spirv_instructions.cpp  spirv_types.cpp
src/thorin/fe/json/: json.cpp  json.h
src/thorin/offload/: kernel_config.cpp  kernel_config.h  lift_offloaded_kernels.cpp  lift_offloaded_kernels.h  lower_offload_intrinsics.cpp  lower_offload_intrinsics.h  offload.cpp  offload.h  offload_c.cpp  offload_llvm.cpp  offload_spirv.cpp  runtime.h
src/thorin/tables/: intrinsicstable.h  nodetable.h
src/thorin/transform/: cleanup_world.cpp  cleanup_world.h  closure_conversion.cpp  codegen_prepare.cpp  codegen_prepare.h  demote_closures.cpp  flatten_tuples.cpp  flatten_tuples.h  flatten_vectors.cpp  flatten_vectors.h  fungl_lower.cpp  fungl_lower.h  hls_channels.cpp  hls_channels.h  hoist_enters.cpp  hoist_enters.h  importer.cpp  importer.h  inliner.cpp  inliner.h  lift.cpp  lift.h  lower_closure_env.cpp  lower_closure_env.h  mangle.cpp  mangle.h  partial_evaluation.cpp  plugin_execute.cpp  resolve_loads.cpp  rewrite.cpp  split_slots.cpp  split_slots.h  vectorize.cpp
src/thorin/util/: graphviz_dump.cpp  scoped_dump.cpp  scoped_dump.h
